--- a/hra/patternlab/site/sass/molecules/_search-filters.scss
+++ b/hra/patternlab/site/sass/molecules/_search-filters.scss
@@ -5,6 +5,11 @@
 .search-filters {
     position: relative;
 
+    .checkbox-label {
+        padding: 3px 0 0 35px;
+        margin: 17px 0 0 0;
+    }
+
     &__heading {
         @include rem-font-size(40px);
         margin-bottom: 15px;
